2008-10-21  Michael Hutchinson  <mhutchinson@novell.com>

	* templates/AssemblyInfo.xft.xml: Use an AssemblyVersion that'll build
	with csc. Fixes "Bug 436273 - created AssemblyInfo.cs does not build
	on VS2005".

2008-10-20  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: fixed "Bug 436870 - Inheriting from
	base class gives bad code completion".

2008-10-20  Mike Krüger  <mkrueger@novell.com>

	* Gui/NewOverrideCompletionData.cs: fixed Bug 436951 - Overriding an
	abstract property is incorrect.

2008-10-20  Lluis Sanchez Gual <lluis@novell.com> 

	* Autotools/Autotools.mdp, Autotools/Makefile.am: Fix build.

2008-10-19  Mike Krüger  <mkrueger@novell.com>

	* Gui/NewOverrideCompletionData.cs:
	* Gui/CSharpTextEditorCompletion.cs:
	* Gui/EventCreationCompletionData.cs: fixed 'Bug 436320 - Autocomplete
	does not show compatible event handlers'.

2008-10-19  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 434701 - No autocomplete
	in attributes'.

2008-10-18  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Gui/CSharpTextEditorCompletion.cs:
	* Gui/EventCreationCompletionData.cs: Worked on event completion.

2008-10-17  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 434705 - No autocomplete
	offered if not assigning result of 'new' to a variable'. 

2008-10-16 Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Gui/MemberCompletionData.cs:
	* Gui/CSharpTextEditorCompletion.cs:
	* Gui/NRefactoryParameterDataProvider.cs: fixed 'Bug 434701 - No
	autocomplete in attributes'.

2008-10-16 Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 434705 - No autocomplete
	offered if not assigning result of 'new' to a variable'.

2008-10-15 Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: fixed 'Bug 434770 - No autocomplete on
	array types'.
